# jromp-mpi-hpc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ProcesoConfiguracionCalendula.md  ResultadosFullParallel.txt  build.gradle.kts  java.80s-356,cn6001.btr  jromp-mpi_2082934.err  prepare_calendula.bash  prepare_data.bash  prepare_data_single_fna_file.bash  prepare_libs_calendula.bash  prepare_libs_local.bash  remove_data_dir.bash  run.node  run.slurm  run_all_configurations.bash  run_calendula.bash  settings.gradle.kts
diagrams/: diagrams.py
docs/: examples.md
errores/: NotasDelError.txt  javap.output  jromp-mpi_2082023.err  jromp-mpi_2083268-1024-OK.out
errores/gcc-11-external-libs-and-flags-2-nodes/: jromp-mpi_2083171-sin-tcp.err  jromp-mpi_2083171-sin-tcp.out  jromp-mpi_2083172-con-tcp.err  jromp-mpi_2083172-con-tcp.out
errores/gcc-11-external-libs-and-flags-single-node/: jromp-mpi_2083163.err  jromp-mpi_2083163.out
errores/icelake-gcc9.4-only/: jromp-mpi_2083103.err  jromp-mpi_2083104.err
resultados/: result_diagrams.py
resultados/datos/: comparison.csv  comparison.ods  execution_configs_c.csv  execution_configs_cuda.csv  execution_configs_java.csv
src/main/c/jromp/mpi/examples/big_multiplication/: asm.bash  big_multiplication.c  big_multiplication.cu  big_multiplication.cuh  big_multiplication.h  run.slurm  run_calendula.bash  run_cuda.slurm
src/main/c/jromp/mpi/examples/fft/: fft_openmp.c
src/main/c/jromp/mpi/examples/fractals/: Makefile  mandelbrot.bash  mandelbrot.c  mandelbrot.h  notes.txt  run.slurm  run_calendula.bash
src/main/c/jromp/mpi/examples/gemm/: big_multiplication.c  big_multiplication.cu  big_multiplication.cuh  big_multiplication.h  configurations.bash  execution_configs_c.csv  execution_configs_c_7_feb.csv  gemm.c  gemm.cu  gemm.cuh  gemm.h  jromp-mpi-c-gemm_2170441.err  jromp-mpi-c-gemm_2170476.err  jromp-mpi-c-gemm_2170478.err  run.slurm  run_all_configurations.bash  run_all_configurations_cuda.bash  run_calendula.bash  run_calendula_batch.bash  run_cuda.slurm  run_local.bash
src/main/c/jromp/mpi/examples/gemm/diagrams/: diagrams.py
src/main/c/jromp/mpi/examples/genome/: Makefile  Notes.txt  genome.c  genome.h  main_genome.c  run_genome.slurm  run_genome_calendula.bash
src/main/c/jromp/mpi/examples/heated_plate/: heated.c  heated_plate_openmp.c
src/main/c/jromp/mpi/examples/jacobi/: jacobi_openmp.c
src/main/c/jromp/mpi/examples/mandelbrot/: mandelbrot_parallel.c  mandelbrot_parallel_with_openmp.c
src/main/c/jromp/mpi/examples/matmul/: Docs.md
src/main/c/jromp/mpi/examples/molecular_dynamics/: md_openmp.c
src/main/c/jromp/mpi/examples/sgefa/: sgefa_openmp.c
src/main/c/jromp/mpi/examples/ziggurat/: ziggurat_openmp.c
src/main/java/jromp/mpi/examples/: FullParallel.java  HelloMPI.java  JrompMPI.java  SimpleJROMP.java
src/main/java/jromp/mpi/examples/gemm/: Gemm.java  Progress.java  Tags.java  Utils.java
src/main/java/jromp/mpi/examples/mandelbrot/: Mandelbrot.java  MandelbrotOriginal.java  MandelbrotParallel.java
